--- a/Machine-Learning_classificacao-com-SKLearn/Introducao-ML-Classificacao-01.ipynb
+++ b/Machine-Learning_classificacao-com-SKLearn/Introducao-ML-Classificacao-01.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Introdução à Classificação\n",
+    "\n",
+    "## 01.04 Primeiro treino e teste de um modelo de classificação"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "source": [
@@ -135,7 +144,99 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## 01.05 Padronização de nomes"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "# features (1 sim, 0 não)\n",
+    "# pêlo longo?\n",
+    "# perna curta?\n",
+    "# faz auau?\n",
+    "porco1 = [0, 1, 0]\n",
+    "porco2 = [0, 1, 1]\n",
+    "porco3 = [1, 1, 0]\n",
+    "\n",
+    "cachorro1 = [0, 1, 1]\n",
+    "cachorro2 = [1, 0, 1]\n",
+    "cachorro3 = [1, 1, 1]\n",
+    "\n",
+    "# 1 => porco, 0 => cachorro\n",
+    "treino_x = [porco1, porco2, porco3, cachorro1, cachorro2, cachorro3]\n",
+    "treino_y = [1, 1, 1, 0, 0, 0] # labels ou etiqueta"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "\n",
+    "model = LinearSVC()\n",
+    "model.fit(treino_x, treino_y)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "LinearSVC()"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "misterio1 = [1, 1, 1]\n",
+    "misterio2 = [1, 1, 0]\n",
+    "misterio3 = [0, 1, 1]\n",
+    "\n",
+    "teste_x = [misterio1, misterio2, misterio3]\n",
+    "teste_y = [0, 1, 1]"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "previsoes = model.predict(teste_x)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "taxa_de_acerto = accuracy_score(teste_y, previsoes)\n",
+    "\n",
+    "print(\"Taxa de acertos %.2f \" % (taxa_de_acerto * 100))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Taxa de acertos 66.67 \n"
+     ]
+    }
+   ],
    "metadata": {}
   }
  ],
