--- a/Machine-Learning_classificacao-com-SKLearn/Introducao-ML-Classificacao-02.ipynb
+++ b/Machine-Learning_classificacao-com-SKLearn/Introducao-ML-Classificacao-02.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 02.02 Lendo dados da internet e manipulando os mesmo"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "source": [
@@ -331,6 +338,202 @@
      "text": [
       "A acurácia foi 95.83%\n"
      ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 02.05 Estratificando splits"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### A partir daqui estamos utilizando a biblioteca para separar treino e teste"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "treino_x, teste_x, treino_y, teste_y = train_test_split(x, y, test_size = 0.25)\n",
+    "print(treino_x.shape)\n",
+    "print(teste_x.shape)\n",
+    "\n",
+    "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(74, 3)\n",
+      "(25, 3)\n",
+      "Treinaremos com 74 elementos e testaremos com 25 elementos\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "SEED = 20\n",
+    "\n",
+    "treino_x, teste_x, treino_y, teste_y = train_test_split(x, y, random_state = SEED, test_size = 0.25)\n",
+    "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
+    "\n",
+    "modelo = LinearSVC()\n",
+    "modelo.fit(treino_x, treino_y)\n",
+    "previsoes = modelo.predict(teste_x)\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia foi %.2f%%\" % acuracia)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Treinaremos com 74 elementos e testaremos com 25 elementos\n",
+      "A acurácia foi 96.00%\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "source": [
+    "treino_y.value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    47\n",
+       "1    27\n",
+       "Name: comprou, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "source": [
+    "teste_y.value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    19\n",
+       "1     6\n",
+       "Name: comprou, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 32
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import LinearSVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "SEED = 20\n",
+    "\n",
+    "treino_x, teste_x, treino_y, teste_y = train_test_split(\n",
+    "    x, y,\n",
+    "    random_state = SEED,\n",
+    "    test_size = 0.25,\n",
+    "    stratify = y\n",
+    ")\n",
+    "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
+    "\n",
+    "modelo = LinearSVC()\n",
+    "modelo.fit(treino_x, treino_y)\n",
+    "previsoes = modelo.predict(teste_x)\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia foi %.2f%%\" % acuracia)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Treinaremos com 74 elementos e testaremos com 25 elementos\n",
+      "A acurácia foi 96.00%\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "source": [
+    "treino_y.value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    49\n",
+       "1    25\n",
+       "Name: comprou, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "source": [
+    "teste_y.value_counts()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0    17\n",
+       "1     8\n",
+       "Name: comprou, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 35
     }
    ],
    "metadata": {}
