--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -209,14 +209,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 2
+     "execution_count": 1
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "source": [
     "dataframe.shape"
    ],
@@ -229,14 +229,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 2
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "source": [
     "dataframe.columns"
    ],
@@ -255,7 +255,379 @@
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 3
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 02.05 Organizando os dados"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "source": [
+    "dataframe.drop(columns=['CUST_ID', 'TENURE'], inplace=True)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "source": [
+    "dataframe.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BALANCE</th>\n",
+       "      <th>BALANCE_FREQUENCY</th>\n",
+       "      <th>PURCHASES</th>\n",
+       "      <th>ONEOFF_PURCHASES</th>\n",
+       "      <th>INSTALLMENTS_PURCHASES</th>\n",
+       "      <th>CASH_ADVANCE</th>\n",
+       "      <th>PURCHASES_FREQUENCY</th>\n",
+       "      <th>ONEOFF_PURCHASES_FREQUENCY</th>\n",
+       "      <th>PURCHASES_INSTALLMENTS_FREQUENCY</th>\n",
+       "      <th>CASH_ADVANCE_FREQUENCY</th>\n",
+       "      <th>CASH_ADVANCE_TRX</th>\n",
+       "      <th>PURCHASES_TRX</th>\n",
+       "      <th>CREDIT_LIMIT</th>\n",
+       "      <th>PAYMENTS</th>\n",
+       "      <th>MINIMUM_PAYMENTS</th>\n",
+       "      <th>PRC_FULL_PAYMENT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.900749</td>\n",
+       "      <td>0.818182</td>\n",
+       "      <td>95.40</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>95.4</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>201.802084</td>\n",
+       "      <td>139.509787</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3202.467416</td>\n",
+       "      <td>0.909091</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6442.945483</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.250000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>4103.032597</td>\n",
+       "      <td>1072.340217</td>\n",
+       "      <td>0.222222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2495.148862</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>773.17</td>\n",
+       "      <td>773.17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>622.066742</td>\n",
+       "      <td>627.284787</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1666.670542</td>\n",
+       "      <td>0.636364</td>\n",
+       "      <td>1499.00</td>\n",
+       "      <td>1499.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>205.788017</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7500.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>817.714335</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>16.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.083333</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1200.0</td>\n",
+       "      <td>678.334763</td>\n",
+       "      <td>244.791237</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       BALANCE  BALANCE_FREQUENCY  PURCHASES  ONEOFF_PURCHASES  \\\n",
+       "0    40.900749           0.818182      95.40              0.00   \n",
+       "1  3202.467416           0.909091       0.00              0.00   \n",
+       "2  2495.148862           1.000000     773.17            773.17   \n",
+       "3  1666.670542           0.636364    1499.00           1499.00   \n",
+       "4   817.714335           1.000000      16.00             16.00   \n",
+       "\n",
+       "   INSTALLMENTS_PURCHASES  CASH_ADVANCE  PURCHASES_FREQUENCY  \\\n",
+       "0                    95.4      0.000000             0.166667   \n",
+       "1                     0.0   6442.945483             0.000000   \n",
+       "2                     0.0      0.000000             1.000000   \n",
+       "3                     0.0    205.788017             0.083333   \n",
+       "4                     0.0      0.000000             0.083333   \n",
+       "\n",
+       "   ONEOFF_PURCHASES_FREQUENCY  PURCHASES_INSTALLMENTS_FREQUENCY  \\\n",
+       "0                    0.000000                          0.083333   \n",
+       "1                    0.000000                          0.000000   \n",
+       "2                    1.000000                          0.000000   \n",
+       "3                    0.083333                          0.000000   \n",
+       "4                    0.083333                          0.000000   \n",
+       "\n",
+       "   CASH_ADVANCE_FREQUENCY  CASH_ADVANCE_TRX  PURCHASES_TRX  CREDIT_LIMIT  \\\n",
+       "0                0.000000                 0              2        1000.0   \n",
+       "1                0.250000                 4              0        7000.0   \n",
+       "2                0.000000                 0             12        7500.0   \n",
+       "3                0.083333                 1              1        7500.0   \n",
+       "4                0.000000                 0              1        1200.0   \n",
+       "\n",
+       "      PAYMENTS  MINIMUM_PAYMENTS  PRC_FULL_PAYMENT  \n",
+       "0   201.802084        139.509787          0.000000  \n",
+       "1  4103.032597       1072.340217          0.222222  \n",
+       "2   622.066742        627.284787          0.000000  \n",
+       "3     0.000000               NaN          0.000000  \n",
+       "4   678.334763        244.791237          0.000000  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "source": [
+    "dataframe.shape"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(8950, 16)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "missing = dataframe.isna().sum()\n",
+    "print(missing)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "BALANCE                               0\n",
+      "BALANCE_FREQUENCY                     0\n",
+      "PURCHASES                             0\n",
+      "ONEOFF_PURCHASES                      0\n",
+      "INSTALLMENTS_PURCHASES                0\n",
+      "CASH_ADVANCE                          0\n",
+      "PURCHASES_FREQUENCY                   0\n",
+      "ONEOFF_PURCHASES_FREQUENCY            0\n",
+      "PURCHASES_INSTALLMENTS_FREQUENCY      0\n",
+      "CASH_ADVANCE_FREQUENCY                0\n",
+      "CASH_ADVANCE_TRX                      0\n",
+      "PURCHASES_TRX                         0\n",
+      "CREDIT_LIMIT                          1\n",
+      "PAYMENTS                              0\n",
+      "MINIMUM_PAYMENTS                    313\n",
+      "PRC_FULL_PAYMENT                      0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "source": [
+    "dataframe['MINIMUM_PAYMENTS'].describe()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "count     8637.000000\n",
+       "mean       864.206542\n",
+       "std       2372.446607\n",
+       "min          0.019163\n",
+       "25%        169.123707\n",
+       "50%        312.343947\n",
+       "75%        825.485459\n",
+       "max      76406.207520\n",
+       "Name: MINIMUM_PAYMENTS, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Adotaremos como estratégia a substituição desse valor pela mediana dos valores deste atributo de total de pagamentos minimos realizados. Não é um valor exato, e sim um aproximado por assim dizer."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "source": [
+    "dataframe.fillna(dataframe.median(), inplace=True)\n",
+    "\n",
+    "missing = dataframe.isna().sum()\n",
+    "print(missing)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "BALANCE                             0\n",
+      "BALANCE_FREQUENCY                   0\n",
+      "PURCHASES                           0\n",
+      "ONEOFF_PURCHASES                    0\n",
+      "INSTALLMENTS_PURCHASES              0\n",
+      "CASH_ADVANCE                        0\n",
+      "PURCHASES_FREQUENCY                 0\n",
+      "ONEOFF_PURCHASES_FREQUENCY          0\n",
+      "PURCHASES_INSTALLMENTS_FREQUENCY    0\n",
+      "CASH_ADVANCE_FREQUENCY              0\n",
+      "CASH_ADVANCE_TRX                    0\n",
+      "PURCHASES_TRX                       0\n",
+      "CREDIT_LIMIT                        0\n",
+      "PAYMENTS                            0\n",
+      "MINIMUM_PAYMENTS                    0\n",
+      "PRC_FULL_PAYMENT                    0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "O próximo passo é normalizar nossos dados. Em alguns atributos relacionados à frequência, teremos um limite que varia de 0 a 1, sendo que 0 é 0% de frequência e 1, por sua vez, significa 100%. Para o atributo de balanço, não teremos a mesma organização de mínimo ou máximo, e isso pode fazer com que o algorítimo gere dados pouco satisfatórios para nós.\n",
+    "\n",
+    "Para realizar a normalização dos dados todos entre zero e um, utilizaremos o biblioteca *Scikit learn*, importando o Normalizer do pacote ´´´sklearn.preprocessing´´´."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "source": [
+    "from sklearn.preprocessing import Normalizer\n",
+    "\n",
+    "values = Normalizer().fit_transform(dataframe.values)\n",
+    "print(values)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[3.93555441e-02 7.87271593e-04 9.17958473e-02 ... 1.94178127e-01\n",
+      "  1.34239194e-01 0.00000000e+00]\n",
+      " [2.93875903e-01 8.34231560e-05 0.00000000e+00 ... 3.76516684e-01\n",
+      "  9.84037959e-02 2.03923046e-05]\n",
+      " [3.10798149e-01 1.24560965e-04 9.63068011e-02 ... 7.74852335e-02\n",
+      "  7.81351982e-02 0.00000000e+00]\n",
+      " ...\n",
+      " [2.27733092e-02 8.11060955e-04 1.40540698e-01 ... 7.90986945e-02\n",
+      "  8.02156174e-02 2.43318384e-04]\n",
+      " [2.65257948e-02 1.64255731e-03 0.00000000e+00 ... 1.03579625e-01\n",
+      "  1.09898221e-01 4.92767391e-04]\n",
+      " [1.86406219e-01 3.33426837e-04 5.46778061e-01 ... 3.15915455e-02\n",
+      "  4.41568390e-02 0.00000000e+00]]\n"
+     ]
     }
    ],
    "metadata": {}
