--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -633,6 +633,26 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 02.06 Executando o clustering"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "kmeans = KMeans(n_clusters=5, n_init=10, max_iter=300)\n",
+    "\n",
+    "y_pred = kmeans.fit_predict(values)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
