--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -653,6 +653,22 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 03.04 Critérios de validação\n",
+    "\n",
+    "Métricas externas: Precisamos ter os labels \n",
+    "Métricas internas: Independente dos labels\n",
+    "\n",
+    "Dentro das métricas internas:\n",
+    "\n",
+    "Critério de compactação: que nos relata quão próximos estão os pontos em um mesmo cluster. \n",
+    "\n",
+    "Critério de separação: que indica quão bem separados estão os pontos em clusters diferentes. \n"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
