--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -669,6 +669,21 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 03.04 Matemática de Silhouette\n",
+    "\n",
+    "**_Coeficiente de Silhouette_**\n",
+    "\n",
+    "$ s = \\frac{\\beta - \\alpha}{max(\\alpha,\\ \\beta)} $\n",
+    "\n",
+    "em que $\\alpha$ é a **distância média** entre o ponto de interesse e todos os outros pontos do **mesmo cluster**. Vamos verificar a compactação dos elementos.\n",
+    "\n",
+    "$\\beta$ é a **distância média** entre o ponto de interesse e todos os outros pontos do **cluster mais próximo**."
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
