--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "source": [
     "dataframe.fillna(dataframe.median(), inplace=True)\n",
     "\n",
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "source": [
     "from sklearn.preprocessing import Normalizer\n",
     "\n",
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "source": [
     "from sklearn.cluster import KMeans\n",
     "\n",
@@ -649,7 +649,17 @@
     "\n",
     "y_pred = kmeans.fit_predict(values)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -680,6 +690,33 @@
     "em que $\\alpha$ é a **distância média** entre o ponto de interesse e todos os outros pontos do **mesmo cluster**. Vamos verificar a compactação dos elementos.\n",
     "\n",
     "$\\beta$ é a **distância média** entre o ponto de interesse e todos os outros pontos do **cluster mais próximo**."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 03.05 Calculando o Silhouette"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "source": [
+    "from sklearn import metrics\n",
+    "labels = kmeans.labels_\n",
+    "silhouette = metrics.silhouette_score(values, labels, metric='euclidean')\n",
+    "print(silhouette)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.3646070028151538\n"
+     ]
+    }
    ],
    "metadata": {}
   },
