--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -721,6 +721,24 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 04.04 Matemática do Davies-Bouldin\n",
+    "\n",
+    "**_Índice Davies-Bouldin_**\n",
+    "\n",
+    "$DB = \\frac{1}{k} \\sum^{k}_{i=1} max \\ R_{ij} \\ (i \\neq j)$\n",
+    "\n",
+    "Em que $R_{ij}$ é dado por\n",
+    "\n",
+    "$R_{ij} = \\frac{s_i + s_j}{d_{ij}}$\n",
+    "\n",
+    "sendo $s$ a similaridade dentro do cluster, isto é, **compactação**.  O $d$ reflete a similaridade entre clusters, a **separação**. Assim temos os dois critérios importantes para uma boa validação\n",
+    "\n"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
