--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -675,7 +675,7 @@
     "\n",
     "**_Coeficiente de Silhouette_**\n",
     "\n",
-    "$ s = \\frac{\\beta - \\alpha}{max(\\alpha,\\ \\beta)} $\n",
+    "$\\displaystyle s = \\frac{\\beta - \\alpha}{max(\\alpha,\\ \\beta)} $\n",
     "\n",
     "em que $\\alpha$ é a **distância média** entre o ponto de interesse e todos os outros pontos do **mesmo cluster**. Vamos verificar a compactação dos elementos.\n",
     "\n",
@@ -717,11 +717,11 @@
     "\n",
     "**_Índice Davies-Bouldin_**\n",
     "\n",
-    "$DB = \\frac{1}{k} \\sum^{k}_{i=1} max \\ R_{ij} \\ (i \\neq j)$\n",
+    "$\\displaystyle DB = \\frac{1}{k} \\sum^{k}_{i=1} max \\ R_{ij} \\ (i \\neq j)$\n",
     "\n",
     "Em que $R_{ij}$ é dado por\n",
     "\n",
-    "$R_{ij} = \\frac{s_i + s_j}{d_{ij}}$\n",
+    "$\\displaystyle R_{ij} = \\frac{s_i + s_j}{d_{ij}}$\n",
     "\n",
     "sendo $s$ a similaridade dentro do cluster, isto é, **compactação**.  O $d$ reflete a similaridade entre clusters, a **separação**. Assim temos os dois critérios importantes para uma boa validação\n",
     "\n"
@@ -758,9 +758,25 @@
    "source": [
     "## 05.04 Matemática do Calinski (Parte 1)\n",
     "\n",
-    "Índice de **Calinski-Harabasz**\n",
+    "Índice de **Calinski-Harabasz** leva em consideração a dispersão dos pontos dentro de um cluster, tanto nos pontos dentro de um cluster específico, como entre clusters diferentes, considerando a compactação e separação também.\n",
     "\n",
-    "$s = \\frac{tr(B_k)}{tr(W_k)} \\times \\frac{n_E - k}{k - 1}$ "
+    "$\\displaystyle s = \\frac{tr(B_k)}{tr(W_k)} \\times \\frac{n_E - k}{k - 1}$ \n",
+    "\n",
+    "$n_E$ é o número de elementos dentro do cluster.\n",
+    "\n",
+    "$k$ é o número de clusters.\n",
+    "\n",
+    "$B_k$ é a dispersão dos elementos entre clusters, sendo que a letra \"B\" significa between.\n",
+    "\n",
+    "$W_k$ é a dispersão de elementos dentro do cluster. $W_k$ é calculado pela seguinte expressão:\n",
+    "\n",
+    "$\\displaystyle W_k = \\sum_{q=1}^{k} \\sum_{x \\in C_q} (x - c_q) (x - c_q)^T$\n",
+    "\n",
+    "em que $x$ é o valor do atributo e $c_q$ é o valor do centróide deste atributo para o cluster $q$.\n",
+    "\n",
+    "$\\sum_{x \\in C_q} (x - c_q) (x - c_q)^T$ é uma matriz de **variância-covariância**(?)\n",
+    "\n",
+    "**Esta explicação do curso está bem ruim. Atualizar quando possível**"
    ],
    "metadata": {}
   },
