--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -781,6 +781,24 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 05.05 Matemática do Calinski (Parte 2)\n",
+    "\n",
+    "cálculo da matriz de variância-covariância para cada cluster\n",
+    "\n",
+    "soma das matrizes de variância-covariância\n",
+    "\n",
+    "cálculo do traço da matriz resultante"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
