--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -795,7 +795,22 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "## 05.06 Matemática do Calinski (Parte 3)\n",
+    "\n",
+    "$\\displaystyle B_k = \\sum_{q=1}^{k} n_q (c_q - c_E) (c_q - c_E)^T$\n",
+    "\n",
+    "$k$ é o número de clusters.\n",
+    "\n",
+    "$n_q$ = número de elementos no cluster\n",
+    "\n",
+    "$c_q$ = centróide do cluster\n",
+    "\n",
+    "$c_E$ = centróide dos elementos \n",
+    "\n",
+    "O índice de Calinski-Harabasz aqui é $s = 47,64$\n",
+    "\n"
+   ],
    "metadata": {}
   },
   {
