--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -704,7 +704,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.36442027909145003\n"
+      "0.36469508290752206\n"
      ]
     }
    ],
@@ -747,7 +747,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1.0759278280692708\n"
+      "1.0746715774624627\n"
      ]
     }
    ],
@@ -810,6 +810,31 @@
     "\n",
     "O índice de Calinski-Harabasz aqui é $s = 47,64$\n",
     "\n"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 05.07 Calculando o Calinski"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "source": [
+    "calinski = metrics.calinski_harabasz_score(values, labels)\n",
+    "print(calinski)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "3431.5608242693174\n"
+     ]
+    }
    ],
    "metadata": {}
   },
