--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -704,7 +704,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0.36469508290752206\n"
+      "0.348539910342043\n"
      ]
     }
    ],
@@ -747,7 +747,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "1.0746715774624627\n"
+      "1.1525062681436633\n"
      ]
     }
    ],
@@ -832,7 +832,104 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "3431.5608242693174\n"
+      "3422.8324441810555\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 06.04 A validação relativa"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "source": [
+    "def clustering_algorithm(n_clusters, dataset):\n",
+    "    kmeans = KMeans(n_clusters=n_clusters, n_init=10, max_iter=300)\n",
+    "    labels = kmeans.fit_predict(dataset)\n",
+    "\n",
+    "    s = metrics.silhouette_score(dataset, labels, metric='euclidean')\n",
+    "    dbs = metrics.davies_bouldin_score(dataset, labels)\n",
+    "    calinski = metrics.calinski_harabasz_score(dataset, labels)\n",
+    "\n",
+    "    return s, dbs, calinski\n",
+    "    "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "s1, dbs1, calinski1 = clustering_algorithm(3, values)\n",
+    "print(s1, dbs1, calinski1)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.3271469293623583 1.307737172274699 3526.3993810436236\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "source": [
+    "s2, dbs2, calinski2 = clustering_algorithm(5, values)\n",
+    "print(s2, dbs2, calinski2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.3645412082353538 1.0759109484969387 3431.7941358665316\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "source": [
+    "s3, dbs3, calinski3 = clustering_algorithm(10, values)\n",
+    "print(s3, dbs3, calinski3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.3502112123293178 1.1210317370677634 3018.982202834351\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "source": [
+    "s4, dbs4, calinski4 = clustering_algorithm(20, values)\n",
+    "print(s4, dbs4, calinski4)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.2885501648972053 1.2351596037251857 2395.306312073078\n"
      ]
     }
    ],
