--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -936,6 +936,72 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 06.05 A estrutura dos clusters"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "source": [
+    "dataframe.count()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "BALANCE                             8950\n",
+       "BALANCE_FREQUENCY                   8950\n",
+       "PURCHASES                           8950\n",
+       "ONEOFF_PURCHASES                    8950\n",
+       "INSTALLMENTS_PURCHASES              8950\n",
+       "CASH_ADVANCE                        8950\n",
+       "PURCHASES_FREQUENCY                 8950\n",
+       "ONEOFF_PURCHASES_FREQUENCY          8950\n",
+       "PURCHASES_INSTALLMENTS_FREQUENCY    8950\n",
+       "CASH_ADVANCE_FREQUENCY              8950\n",
+       "CASH_ADVANCE_TRX                    8950\n",
+       "PURCHASES_TRX                       8950\n",
+       "CREDIT_LIMIT                        8950\n",
+       "PAYMENTS                            8950\n",
+       "MINIMUM_PAYMENTS                    8950\n",
+       "PRC_FULL_PAYMENT                    8950\n",
+       "dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "random_data = np.random.rand(8950, 16)\n",
+    "s, dbs, calinski = clustering_algorithm(5, random_data)\n",
+    "print(s, dbs, calinski)\n",
+    "print(s2, dbs2, calinski2)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.03974351045584813 3.476123625572241 303.5000848272196\n",
+      "0.3645412082353538 1.0759109484969387 3431.7941358665316\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
