--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -1002,6 +1002,40 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 06.06 A estabilidade dos clusters"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "source": [
+    "set1, set2, set3 = np.array_split(values, 3)\n",
+    "\n",
+    "s1, dbs1, calinski1 = clustering_algorithm(5, set1)\n",
+    "s2, dbs2, calinski2 = clustering_algorithm(5, set2)\n",
+    "s3, dbs3, calinski3 = clustering_algorithm(5, set3)\n",
+    "\n",
+    "print(s1, dbs1, calinski1)\n",
+    "print(s2, dbs2, calinski2)\n",
+    "print(s3, dbs3, calinski3)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.36908155221853267 1.0580445685596032 1204.0558494933455\n",
+      "0.35350840508474196 1.1398820749293477 1194.791527132435\n",
+      "0.36704188760608253 1.0984932613776763 1167.5309516803998\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
