--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -1568,6 +1568,50 @@
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 08.05 Analisando os valores"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "source": [
+    "centroids = kmeans.cluster_centers_\n",
+    "print(centroids)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[[2.35481987e-01 2.16532182e-04 6.00600804e-02 3.39871776e-02\n",
+      "  2.60781223e-02 4.00599972e-01 5.26908300e-05 2.04104938e-05\n",
+      "  3.53115349e-05 6.55611402e-05 1.57284062e-03 1.12114713e-03\n",
+      "  5.34945073e-01 5.97780714e-01 1.04603362e-01 2.77383565e-05]\n",
+      " [6.91187945e-02 2.30816694e-04 1.21521078e-01 4.80031635e-02\n",
+      "  7.36181130e-02 2.43929836e-02 1.72835316e-04 3.36833100e-05\n",
+      "  1.40285541e-04 7.93760274e-06 1.24322926e-04 2.86353752e-03\n",
+      "  9.43525517e-01 1.53887007e-01 5.68550654e-02 7.61360874e-05]\n",
+      " [1.60019989e-01 2.45067415e-04 4.38386606e-01 2.57038615e-01\n",
+      "  1.81519502e-01 2.60235369e-02 2.04206502e-04 8.89789093e-05\n",
+      "  1.50451494e-04 9.39554416e-06 1.70326014e-04 6.17071281e-03\n",
+      "  6.03648627e-01 4.02922922e-01 8.54021682e-02 7.18645733e-05]\n",
+      " [5.04360399e-01 2.72332991e-04 6.19341759e-02 3.63718661e-02\n",
+      "  2.55840065e-02 2.52479675e-01 6.75443393e-05 2.58563809e-05\n",
+      "  4.51378518e-05 5.73611721e-05 1.15538252e-03 1.33502727e-03\n",
+      "  7.19101493e-01 1.66282908e-01 1.79466300e-01 5.51886878e-07]\n",
+      " [3.31227718e-01 2.67804754e-04 1.57788578e-01 3.54534414e-02\n",
+      "  1.22722636e-01 5.87848015e-02 1.65861632e-04 2.55304727e-05\n",
+      "  1.47183612e-04 1.94638283e-05 4.31081415e-04 3.85695837e-03\n",
+      "  3.75234497e-01 2.51695644e-01 6.82290835e-01 4.27111420e-06]]\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "source": [],
