--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -2748,8 +2748,8 @@
     "```\n",
     "CLUSTER 0: clientes com os menores valores em gastos. Menor valor em saques.\n",
     "CLUSTER 1: clientes com os maiores valores em gastros. Menor valor em compras. Valor considerável em saques. \n",
-    "CLUSTER 2: Maior valor em compras com grande diferença.\n",
-    "CLUSTER 3: Maior valor em saques.\n",
+    "CLUSTER 2: Maior valor em saques.\n",
+    "CLUSTER 3: Maior valor em compras com grande diferença.\n",
     "CLUSTER 4:\n",
     "```"
    ],
@@ -2763,8 +2763,8 @@
     "```\n",
     "CLUSTER 0: Clientes que gastam pouco.\n",
     "CLUSTER 1: Clientes que mais gastam. O foco deles é saque.\n",
-    "CLUSTER 2: Clientes que gastam muito com compras.\n",
-    "CLUSTER 3: Clientes que gastam muito com saques.\n",
+    "CLUSTER 2: Clientes que gastam muito com saques.\n",
+    "CLUSTER 3: Clientes que gastam muito com compras.\n",
     "CLUSTER 4:\n",
     "```"
    ],
@@ -2916,8 +2916,8 @@
     "```\n",
     "CLUSTER 0: Clientes que gastam pouco. Clientes com o maior limite.\n",
     "CLUSTER 1: Clientes que mais gastam. O foco deles é saque.\n",
-    "CLUSTER 2: Clientes que gastam muito com compras.\n",
-    "CLUSTER 3: Clientes que gastam muito com saques.\n",
+    "CLUSTER 2: Clientes que gastam muito com saques.\n",
+    "CLUSTER 3: Clientes que gastam muito com compras.\n",
     "CLUSTER 4: Clientes com o menor limite.\n",
     "```"
    ],
@@ -3053,14 +3053,10 @@
    "cell_type": "markdown",
    "source": [
     "```\n",
-    "CLUSTER 0: Clientes que gastam pouco. Clientes com o maior limite. Bons pagadores. Maior número de clientes.\n",
-    "\n",
+    "CLUSTER 0: Clientes que gastam pouco. Clientes com o maior limite. Bons pagadores. Maior número de clients.\n",
     "CLUSTER 1: Clientes que mais gastam. O foco deles é o saque. Piores pagadores. Boa quantidade de clientes.\n",
-    "\n",
-    "CLUSTER 2: Clientes que gastam muito com compras. Melhores pagadores.\n",
-    "\n",
-    "CLUSTER 3: Clientes que gastam muito com saques. Pagam as vezes.\n",
-    "\n",
+    "CLUSTER 2: Clientes que gastam muito com saques. Pagam as vezes.\n",
+    "CLUSTER 3: Clientes que gastam muito com compras. Melhores pagadores.\n",
     "CLUSTER 4: Clientes com o menor limite. Não são bons pagadores. Menor quantidade de clientes.\n",
     "```"
    ],
