--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -2676,7 +2676,10 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 09.04 Interpretando os clusters (Parte 1)"
+    "## 09.04 Interpretando os clusters (Parte 1)\n",
+    "\n",
+    "Os clusters obtidos aqui estão em ordem diferente dos apresentados na aula.\n",
+    "clusters 2 e 3 estão trocados"
    ],
    "metadata": {}
   },
@@ -3059,6 +3062,32 @@
     "CLUSTER 3: Clientes que gastam muito com compras. Melhores pagadores.\n",
     "CLUSTER 4: Clientes com o menor limite. Não são bons pagadores. Menor quantidade de clientes.\n",
     "```"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 09.06 Os padrões de cada cluster"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "O Cluster 0 está bastante claro na sua proposta e representam a maior quantidade de clientes, isto é, aqueles que gastam pouco e tem o maior limite, além de tudo são bons pagadores da fatura.\n",
+    "\n",
+    "O Cluster 1 representa os clientes que amais gastam, com foco no uso de cartão para saque de dinheiro e são os piores pagadores.\n",
+    "\n",
+    "Cluster 2 possui uma quantidade padrão de clientes que gastam muito com saques.\n",
+    "\n",
+    "O Cluster 3 representam os clientes que gastam com compras e pagam suas faturas adequadamente, o que reflete uma boa saúde financeira.\n",
+    "\n",
+    "Cluster 4 refletem os clientes com o menor limite no cartão e que não são bons pagadores de suas faturas, por sorte, representam a menor quantidade de clientes da empresa.\n",
+    "\n",
+    "Temos nosso cinco grupos feito, criamos labels para cada um dos clusters com base nos valores do centroides e todos os outros cálculos e médias que aprendemos a elaborar.\n",
+    "\n",
+    "Fizemos uma descrição razoavelmente detalhada dos clientes, não simplesmente aqueles que gastam mais ou menos, precisamos utilizar vários atributos para identificarmos diferentes perfis."
    ],
    "metadata": {}
   },
