--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -3093,6 +3093,34 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## 09.07 Utilizando os clusters"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Uma ideia é aplicar uma estratégia de negócio em um dos grupos com o objetivo de aumentar o arrecadamento de dinheiro.\n",
+    "\n",
+    "O grupo mais adequado para isso seria o **cluster 0**, afinal ele possui o maior número de clientes, são bons pagadores, bom limite de crédito, mas gastam pouco. Nossa ideia é engajar esse grupo para que ele utilize mais o cartão de crédito.\n",
+    "\n",
+    "Outro grupo interessante para aumento de lucros é o **cluster 2**, afinal gastam muito com compras e são os melhores pagadores. Eles não possuem um limite de crédito alto, mas uma forma de incentivar ainda mais o uso do cartão de crédito é aumentar gradativamente o limite desse grupo.\n",
+    "\n",
+    "Para o grupo que apresenta os piores pagadores, teríamos de estruturar outro tipo de estratégia.\n",
+    "\n",
+    "Trabalharemos com o **cluster 0**. Queremos que esses clientes gastem mais para incentivar o lucro na empresa. Suponhamos que a estratégia seja fazer uma parceria com uma empresa de pontos que forneça benefícios para o cliente que usar mais o crédito.\n",
+    "\n",
+    "Para verificarmos se a nossa estratégia foi eficaz e utilizamos o grupo certo, faremos o chamado **teste AB**. Dividiremos o os clientes do cluster 0 em dois grupos: o grupo de controle e o grupo de teste.\n",
+    "\n",
+    "o grupo de controle permanecerá sem nenhuma modificação, ou seja, não haverá programa de pontos. Já o grupo de teste, em um período definido, receberá o programa de pontos.\n",
+    "\n",
+    "Ao final do período, verificaremos se as pessoas que participaram do programa de pontos gastaram mais com o cartão ou não. Assim teremos um resultado confiável, com clientes com características similares."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {}
   }
