Fim do curso: Clustering: extraindo padrões de dados

--- a/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
+++ b/Clustering_extraindo-padroes-de-dados/Notebook-cartao-de-credito.ipynb
@@ -3121,6 +3121,13 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Fim do Curso"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
    "source": [],
    "metadata": {}
   }
