--- a/Machine-Learning_classificacao-com-SKLearn/Introducao-ML-Classificacao-04.ipynb
+++ b/Machine-Learning_classificacao-com-SKLearn/Introducao-ML-Classificacao-04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        "4           4              7935        2014  117384.68  yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4           4            7935           2014  117384.68     yes"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "4           4            7935           2014  117384.68        1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +412,7 @@
        "4                9  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "4                9  12770.11290  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "4  117384.68        1                9  12770.11290"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
      "output_type": "stream",
      "text": [
       "Treinaremos com 7500 elementos e testaremos com 2500 elementos\n",
-      "A acurácia foi 46.88%\n"
+      "A acurácia foi 53.32%\n"
      ]
     },
     {
@@ -679,7 +679,153 @@
     "                                                         stratify = y)\n",
     "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
     "\n",
-    "modelo = LinearSVC()\n",
+    "modelo = LinearSVC(max_iter=10000)\n",
+    "modelo.fit(treino_x, treino_y)\n",
+    "previsoes = modelo.predict(teste_x)\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia foi %.2f%%\" % acuracia)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 05.04 Dummy Classifiers e SVC "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A acurácia do dummy foi 52.44%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/yorinori/anaconda3/lib/python3.8/site-packages/sklearn/dummy.py:131: FutureWarning: The default value of strategy will change from stratified to prior in 0.24.\n",
+      "  warnings.warn(\"The default value of strategy will change from \"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "dummy = DummyClassifier()\n",
+    "dummy.fit(treino_x, treino_y)\n",
+    "previsoes = dummy.predict(teste_x)\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia do dummy foi %.2f%%\" % acuracia)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A acurácia do dummy foi 50.68%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.dummy import DummyClassifier\n",
+    "\n",
+    "dummy_stratified = DummyClassifier(strategy='stratified')\n",
+    "dummy_stratified.fit(treino_x, treino_y)\n",
+    "previsoes = dummy_stratified.predict(teste_x)\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia do dummy foi %.2f%%\" % acuracia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A acurácia do dummy mostfrequent foi 58.00%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy_mostfrequent = DummyClassifier(strategy=\"most_frequent\")\n",
+    "dummy_mostfrequent.fit(treino_x, treino_y)\n",
+    "previsoes = dummy_mostfrequent.predict(teste_x)\n",
+    "\n",
+    "acuracia = accuracy_score(teste_y, previsoes) * 100\n",
+    "print(\"A acurácia do dummy mostfrequent foi %.2f%%\" % acuracia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A acurácia do dummy stratified foi 52.64%\n"
+     ]
+    }
+   ],
+   "source": [
+    "dummy_stratified = DummyClassifier()\n",
+    "dummy_stratified.fit(treino_x, treino_y)\n",
+    "acuracia = dummy_stratified.score(teste_x, teste_y) * 100\n",
+    "\n",
+    "print(\"A acurácia do dummy stratified foi %.2f%%\" % acuracia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Treinaremos com 7500 elementos e testaremos com 2500 elementos\n",
+      "A acurácia foi 77.48%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "SEED = 5\n",
+    "np.random.seed(SEED)\n",
+    "raw_treino_x, raw_teste_x, treino_y, teste_y = train_test_split(x, y, test_size = 0.25,\n",
+    "                                                         stratify = y)\n",
+    "print(\"Treinaremos com %d elementos e testaremos com %d elementos\" % (len(treino_x), len(teste_x)))\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(raw_treino_x)\n",
+    "treino_x = scaler.transform(raw_treino_x)\n",
+    "teste_x = scaler.transform(raw_teste_x)\n",
+    "\n",
+    "modelo = SVC()\n",
     "modelo.fit(treino_x, treino_y)\n",
     "previsoes = modelo.predict(teste_x)\n",
     "\n",
