--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02.02 Obtendo a base de dados"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +208,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,6 +218,97 @@
     "\n",
     "dados = pd.read_csv('data/creditcard.csv')\n",
     "dados.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02.03 Analisando a base de dados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time      0\n",
+      "V1        0\n",
+      "V2        0\n",
+      "V3        0\n",
+      "V4        0\n",
+      "V5        0\n",
+      "V6        0\n",
+      "V7        0\n",
+      "V8        0\n",
+      "V9        0\n",
+      "V10       0\n",
+      "V11       0\n",
+      "V12       0\n",
+      "V13       0\n",
+      "V14       0\n",
+      "V15       0\n",
+      "V16       0\n",
+      "V17       0\n",
+      "V18       0\n",
+      "V19       0\n",
+      "V20       0\n",
+      "V21       0\n",
+      "V22       0\n",
+      "V23       0\n",
+      "V24       0\n",
+      "V25       0\n",
+      "V26       0\n",
+      "V27       0\n",
+      "V28       0\n",
+      "Amount    0\n",
+      "Class     0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dados.isna().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de transações:  284807\n",
+      "Número de fraudes:  492 0.17\n",
+      "Número de transações normais:  284315 99.83\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_trasacoes = dados['Class'].count()\n",
+    "n_fraudes = dados['Class'].sum()\n",
+    "n_normais = n_trasacoes - n_fraudes\n",
+    "fraudes_porc = n_fraudes / n_trasacoes\n",
+    "normais_porc = n_normais / n_trasacoes\n",
+    "\n",
+    "print(\"Número de transações: \", n_trasacoes)\n",
+    "print(\"Número de fraudes: \", n_fraudes, \"%.2f\" %(fraudes_porc * 100))\n",
+    "print(\"Número de transações normais: \", n_normais, \"%.2f\" %(normais_porc * 100))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O resultado mostra que os dados são desbalanceados.  Há uma alta porcentagem de transações normais e uma pequena porcentagem de transações que são fraudes."
    ]
   },
   {
