--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -309,6 +309,62 @@
    "metadata": {},
    "source": [
     "O resultado mostra que os dados são desbalanceados.  Há uma alta porcentagem de transações normais e uma pequena porcentagem de transações que são fraudes."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 02.05 Criando uma Árvore de Decisão com scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dados.drop('Class', axis=1).values\n",
+    "y = dados['Class'].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedShuffleSplit\n",
+    "\n",
+    "validador = StratifiedShuffleSplit(n_splits=1, test_size=0.1, random_state=0)\n",
+    "\n",
+    "for treino_id, teste_id in validador.split(X, y):\n",
+    "    X_train, X_test = X[treino_id], X[teste_id]\n",
+    "    y_train, y_test = y[treino_id], y[teste_id]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n",
+      "<frozen importlib._bootstrap>:219: RuntimeWarning: numpy.ufunc size changed, may indicate binary incompatibility. Expected 192 from C header, got 216 from PyObject\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn import tree\n",
+    "\n",
+    "classificador_arvore_decisao = tree.DecisionTreeClassifier()\n",
+    "arvore = classificador_arvore_decisao.fit(X_train, y_train)\n",
+    "y_pred = arvore.predict(X_test)"
    ]
   },
   {
