Fix: order of y_test, y_pred

--- a/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
+++ b/Arvores-de-Decisao_aprofundando-em-modelos-de-ML/arvore_decisao.ipynb
@@ -512,9 +512,9 @@
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "\n",
-    "def validar_arvore(y_pred, y_test):\n",
-    "    print(accuracy_score(y_pred, y_test))\n",
-    "    print(confusion_matrix(y_pred, y_test))"
+    "def validar_arvore(y_test, y_pred):\n",
+    "    print(accuracy_score(y_test, y_pred))\n",
+    "    print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
@@ -557,9 +557,9 @@
     "from sklearn.metrics import precision_score\n",
     "\n",
     "def validar_arvore(y_test, y_pred):\n",
-    "  print(accuracy_score(y_pred, y_test))\n",
-    "  print(precision_score(y_pred, y_test))\n",
-    "  print(confusion_matrix(y_pred, y_test))"
+    "  print(accuracy_score(y_test, y_pred))\n",
+    "  print(precision_score(y_test, y_pred))\n",
+    "  print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
@@ -595,11 +595,11 @@
     "from sklearn.metrics import precision_score\n",
     "from sklearn.metrics import recall_score\n",
     "\n",
-    "def validar_arvore(y_pred, y_test):\n",
-    "  print(accuracy_score(y_pred, y_test))\n",
-    "  print(precision_score(y_pred, y_test))\n",
-    "  print(recall_score(y_pred, y_test))\n",
-    "  print(confusion_matrix(y_pred, y_test))"
+    "def validar_arvore(y_test, y_pred):\n",
+    "  print(accuracy_score(y_test, y_pred))\n",
+    "  print(precision_score(y_test, y_pred))\n",
+    "  print(recall_score(y_test, y_pred))\n",
+    "  print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
